--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
                 <span id="discord-link">https://discord.gg/hSeAVWM8ky</span>
                 <button id="copy-discord" type="button">Copy Link</button>
             </div>
+            <div class="info-block">
+                <span class="label">Modpack:</span>
+                <a id="modpack-download" href="modpack.zip" download>
+                    <button type="button">Download Modpack</button>
+                </a>
+                <span class="modpack-note">(Upload your modpack.zip to the repository)</span>
+            </div>
         </div>
     </div>
     <canvas id="smoke-bg"></canvas>
